taking input and console

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
+    <style>
+        textarea{
+            display: block;
+            width: 90%;
+            height: 10vh;
+            margin: 1rem;
+            padding: 1rem;
+        }
+    </style>
 </head>
 <body>
     <h1>talk banana</h1>
+    <textarea id="txt-input" placeholder="Put your Sentence in English"></textarea>
+    <button id="btn-translate">Translate</button>
 
    <script src="app.js"></script>
 </body>
