input output processing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             margin: 1rem;
             padding: 1rem;
         }
+        #output{
+            border: 1px solid black;
+            height: 10vh;
+            width: 90%;
+            margin: 1rem;
+            padding: 1rem;
+        }
     </style>
 </head>
 <body>
@@ -19,6 +26,8 @@
     <textarea id="txt-input" placeholder="Put your Sentence in English"></textarea>
     <button id="btn-translate">Translate</button>
 
+    <div style="font-size: large;">Output will be shown here 👇</div>
+    <div id="output"></div>
    <script src="app.js"></script>
 </body>
 </html>
